rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multiplied_with_segment.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__name | orders__count | returns__count
----------------+---------------+---------------
Alice           | 2             | 1             
Bob             | 2             | 2             
Diana           | 1             | 0
