rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multiplied_with_time_and_dimension.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__city | customers__created_at_month | orders__count | returns__count
----------------+-----------------------------+---------------+---------------
New York        | 2025-01-01 00:00:00         | 4             | 1             
Boston          | 2025-02-01 00:00:00         | 3             | 2             
Chicago         | 2025-02-01 00:00:00         | 0             | 2             
New York        | 2025-03-01 00:00:00         | 1             | 0
