rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multiplied_with_time_granularity.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__name | customers__created_at_month | orders__count | returns__count
----------------+-----------------------------+---------------+---------------
Alice           | 2025-01-01 00:00:00         | 4             | 1             
Bob             | 2025-02-01 00:00:00         | 3             | 2             
Charlie         | 2025-02-01 00:00:00         | 0             | 2             
Diana           | 2025-03-01 00:00:00         | 1             | 0
