rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__order_by_filtered_measure_outside_selection.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__name | orders__count
----------------+--------------
Bob             | 3            
Charlie         | 0
